Merge develop
fix unit tests
fix merge issue
fix feedback

ALEC-140